{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player Movement",
            "id": "9f9f0f67-347b-4161-bc5d-424fff58f84e",
            "actions": [
                {
                    "name": "LeftClickMovement",
                    "type": "Button",
                    "id": "1d767177-403e-4f74-a48d-5f4d09c0d24b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6a1f4a45-a4f7-424a-8c2e-6b4453c43e5f",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClickMovement",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Player Actions",
            "id": "9f1d4400-e1ee-4d92-a474-eb8f98e3d20f",
            "actions": [
                {
                    "name": "RightClick",
                    "type": "Button",
                    "id": "0ea17ac0-efbd-4536-8bde-4696c10ea903",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Ability1",
                    "type": "Button",
                    "id": "716ffa9a-49cb-4c5e-b5bf-fcdfa6139841",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Ability2",
                    "type": "Button",
                    "id": "ee39e833-c8b8-41f2-b77b-f48131305da8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Ability3",
                    "type": "Button",
                    "id": "754c22b2-7288-4f7b-ad0e-6e0794cea383",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Ability4",
                    "type": "Button",
                    "id": "5d0597f9-3d28-408c-84a5-86ef307e92d1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c43606d9-0815-4511-8e74-3b1a7c0df703",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "820555e2-4670-4899-ae7d-eed71b81b372",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ability1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4e103d3e-75fb-446a-94ac-6d566db0a5bc",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ability2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c0223259-bc81-4bb0-bf37-9fec8d957d20",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ability3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5a64b65c-361b-4089-814a-53ec4f6d2ebc",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ability4",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Camera Actions",
            "id": "e1ce38b6-56b1-41d6-bad0-a051ffa7799a",
            "actions": [
                {
                    "name": "Zoom",
                    "type": "PassThrough",
                    "id": "a16841ec-70e2-4d9a-985c-c8625141c3f4",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "32d8133e-2a2d-495e-8cab-521b3f1c01de",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}